--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,32 +1,13 @@
-<html>
-    <head>
-        <title>
-            Питер
-        </title>
-    </head>
-    <body>
-        <h1>Любимые места</h1>
-        <p>Петергоф <br>Метро<br>
-        Зенит-Арена<br>
-        Исааковский собор</p>
-    </body>
+{% extends 'blog/base.html' %}
 
-</html>
-
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
+{% block content %}
     {% for post in posts %}
-        <div>
-            <p>published: {{ post.published_date }}</p>
-            <h1><a href="">{{ post.title }}</a></h1>
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
-{% endfor %}
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
